# rust-yew-app

./: .gitignore  Cargo.toml  README.md
crates/wasm/: Cargo.toml  Trunk.toml  bonnie.toml  index.html  tailwind.config.js  tailwind.css
crates/wasm/src/: lib.rs  main.rs  types.rs
crates/wasm/src/components/: app.rs  delete_button.rs  editor.rs  header.rs  list_errors.rs  list_pagination.rs  login.rs  mod.rs  profile.rs  profile_favorites.rs  register.rs  settings.rs
crates/wasm/src/components/article/: article_actions.rs  article_list.rs  article_meta.rs  article_preview.rs  mod.rs
crates/wasm/src/components/comment/: comment.rs  comment_container.rs  comment_input.rs  comment_list.rs  mod.rs
crates/wasm/src/components/home/: banner.rs  main_view.rs  mod.rs  tags.rs
