[package]
name = "wasm"
version = "0.1.0"
authors = ["Wesley Oliveira <oliveirawesleyrjg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
failure = "0.1"
log = "0.4"
serde = "1.0"
web_logger = "0.2"
yew = "0.19.3"
yew-router = "0.16.0"
wasm-bindgen = "0.2.74"
